Add support for PKCE